Create new landing page

--- a/website/layouts/partials/above.hbs
+++ b/website/layouts/partials/above.hbs
@@ -10,10 +10,13 @@
 </head>
 <body>
     <header class="container grid-960 navbar">
-    <section></section>
-      <section class="navbar-section navbar-center">
+      <section class="navbar-section">
         <a class="navbar-brand" href="{{rootPath}}"><img src="{{rootPath}}images/redback.png" class="logo"/></a>
         <a href="{{rootPath}}" class="navbar-brand"><span class="red">red</span>backup <span class="sub">{{slogan}}</span></a>
+      </section>
+      <section class="navbar-section">
+          <a href="{{rootPath}}/overview/index.html" class="btn btn-link">Home</a>
+          <a href="{{rootPath}}/overview/index.html" class="btn btn-link">Overview</a>
       </section>
     </header>
   <section class="container grid-960">
