--- a/website/src/css/style.css
+++ b/website/src/css/style.css
@@ -2,7 +2,7 @@
     font-size: 1.8rem;
 }
 .jumbotron {
-    margin-bottom: 2rem;    
+    margin-bottom: 2rem;
 }
 
 .logo {
@@ -27,7 +27,7 @@
 }
 
 .red{
-    color: #de1300;
+    color: #dd3131;
 }
 
 .navbar .navbar-brand{
