--- a/website/layouts/partials/above.hbs
+++ b/website/layouts/partials/above.hbs
@@ -15,8 +15,8 @@
         <a href="{{rootPath}}" class="navbar-brand"><span class="red">red</span>backup <span class="sub">{{slogan}}</span></a>
       </section>
       <section class="navbar-section">
-          <a href="{{rootPath}}/overview/index.html" class="btn btn-link">Home</a>
-          <a href="{{rootPath}}/overview/index.html" class="btn btn-link">Overview</a>
+          <a href="{{rootPath}}index.html" class="btn btn-link">Home</a>
+          <a href="{{rootPath}}overview/index.html" class="btn btn-link">Overview</a>
       </section>
     </header>
   <section class="container grid-960">
