Add License and emoji links

--- a/website/layouts/partials/above.hbs
+++ b/website/layouts/partials/above.hbs
@@ -15,8 +15,10 @@
         <a href="{{rootPath}}" class="navbar-brand"><span class="red">red</span>backup <span class="sub">{{slogan}}</span></a>
       </section>
       <section class="navbar-section">
-          <a href="{{rootPath}}index.html" class="btn btn-link">Home</a>
-          <a href="{{rootPath}}overview/index.html" class="btn btn-link">Overview</a>
+          <a href="{{rootPath}}index.html" class="btn btn-link">🏠 Home</a>
+          <a href="https://git.redbackup.org/projects/RED" class="btn btn-link">📄 Source Code</a>
+          <a href="https://project.redbackup.org/projects/REDPRO" class="btn btn-link">🗃 Project Tracker</a>
+          <a href="{{rootPath}}overview/index.html" class="btn btn-link">🔭 Overview</a>
       </section>
     </header>
   <section class="container grid-960">
