--- a/website/layouts/partials/below.hbs
+++ b/website/layouts/partials/below.hbs
@@ -1,3 +1,6 @@
+    <footer>
+        &copy; the redbackup collective. Content on this website is available under the <a href="https://www.gnu.org/copyleft/fdl.html">GNU FDL</a>, unless noted differently.
+    </footer>
 </section>
 {{#dev}}
 <script src="http://localhost:35729/livereload.js"></script>
