--- a/website/src/css/style.css
+++ b/website/src/css/style.css
@@ -37,8 +37,14 @@
 
 .navbar .btn-link{
     font-size: 1.6rem;
+    margin-left: 0.6rem;
 }
 header {
     margin-top: 2rem;
     margin-bottom: 2rem;
 }
+footer {
+    margin-top: 4rem;
+    margin-bottom: 1rem;
+    padding-top: 0.5rem;
+    border-top: solid 1px #f8f9fa;
