Add binary builds link to website

--- a/website/layouts/partials/above.hbs
+++ b/website/layouts/partials/above.hbs
@@ -28,6 +28,7 @@
           <ul>
               <li><a href="https://project.redbackup.org/projects/REDPRO" class="btn btn-link">🗃 Project Tracker</a></li>
               <li><a href="https://git.redbackup.org/projects/RED" class="btn btn-link">📄 Source Code</a></li>
+              <li><a href="https://ci.redbackup.org/browse/RED-REDPRO/latestSuccessful/artifact" class="btn btn-link">🏗️ Binary Builds</a></li>
           </ul>
       </section>
     </header>
