--- a/website/src/overview.hbs
+++ b/website/src/overview.hbs
@@ -26,7 +26,7 @@ layout: main.hbs
     <div class="column col-6 col-md-12">
         <div class="card">
             <div class="card-header">
-                <div class="card-title"><a href="../problem-statement.pdf">❓ Problem Statement</a></div>
+                <div class="card-title"><a href="{{#archive}}../{{/archive}}../documents/problem-statement.pdf">❓ Problem Statement</a></div>
             </div>
             <div class="card-body">
                 Initial project statement and task description
@@ -36,7 +36,7 @@ layout: main.hbs
     <div class="column col-6 col-md-12">
         <div class="card">
             <div class="card-header">
-                <div class="card-title"><a href="../project-plan.pdf" >🛣️ Project Plan</a></div>
+                <div class="card-title"><a href="{{#archive}}../{{/archive}}../documents/project-plan.pdf" >🛣️ Project Plan</a></div>
             </div>
             <div class="card-body">
                 organisation, schedule, iterations, milestones, risks analysis, risk management, infrastructure, quality measures, definition of done
@@ -47,7 +47,7 @@ layout: main.hbs
         <div class="card">
             <div class="card-header">
                 <div class="card-title">
-                    <a href="../final-submission.pdf">📚 Final Submission Document</a>
+                    <a href="{{#archive}}../{{/archive}}../documents/final-submission.pdf">📚 Final Submission Document</a>
                 </div>
             </div>
             <div class="card-body">
@@ -60,11 +60,15 @@ layout: main.hbs
         <div class="card">
             <div class="card-header">
                 <div class="card-title">
+                    {{#archive}}
+                    <a href="../../project-management/jira-issue-export.html">🗃 Task List</a>
+                    {{else}}
                     <a href="https://project.redbackup.org/projects/REDPRO/issues/">🗃 Task List</a>
+                    {{/archive}}
                 </div>
             </div>
             <div class="card-body">
-                JIRA issue tracker, <a href="https://project.redbackup.org/issues/?filter=10202">project progress</a>, time tracking (<a href="https://project.redbackup.org/secure/TempoTeamBoard!timesheet.jspa?team=2&use-ISO8061-week-numbers=false&period=&periodType=FLEX&periodView=DATES&from=2017-09-17&to=2017-10-17&exact=&span=31">per person</a>,&nbsp;<a href="https://project.redbackup.org/secure/TempoProjectBoard!report.jspa?v=1&periodType=FLEX&periodView=DATES&from=2017-09-17&to=2017-10-17&projectFilter=project&project=10104">per issue</a>)
+                JIRA issue tracker{{#archive}} export{{else}}, <a href="https://project.redbackup.org/issues/?filter=10202">project progress</a>, time tracking (<a href="https://project.redbackup.org/secure/TempoTeamBoard!timesheet.jspa?team=2&use-ISO8061-week-numbers=false&period=&periodType=FLEX&periodView=DATES&from=2017-09-17&to=2017-10-17&exact=&span=31">per person</a>,&nbsp;<a href="https://project.redbackup.org/secure/TempoProjectBoard!report.jspa?v=1&periodType=FLEX&periodView=DATES&from=2017-09-17&to=2017-10-17&projectFilter=project&project=10104">per issue</a>){{/archive}}
 	    </div>
         </div>
     </div>
@@ -77,15 +81,15 @@ layout: main.hbs
                 </div>
             </div>
             <ul>
-		<li><a href="../meetings/2017-09-18-kickoff/">18.09.2017 - Project Kickoff</a></li>
-		<li><a href="../meetings/2017-09-22-kickoff/">22.09.2017 - Kickoff with MeF</a></li>
-		<li><a href="../meetings/2017-09-29-weekly-meeting/">29.09.2017 - Advisor Meeting Week 2</a></li>
-		<li><a href="../meetings/2017-10-10-weekly-meeting/">10.10.2017 - Advisor Meeting Week 4</a></li>
-		<li><a href="../meetings/2017-10-20-weekly-meeting/">20.10.2017 - Advisor Meeting Week 5</a></li>
-        <li><a href="../meetings/2017-11-09-weekly-meeting/">09.11.2017 - Advisor Meeting Week 8</a></li>
-        <li><a href="../meetings/2017-11-21-weekly-meeting/">21.11.2017 - Advisor Meeting Week 10</a></li>
-        <li><a href="../meetings/2017-XX-XX-weekly-meeting/">XX.XX.2017 - Advisor Meeting Week XX</a></li>
-        <li><i><a href="../meetings/_template-meeting-minutes/">Template</a></i></li>
+		<li><a href="../meetings/2017-09-18-kickoff/index.html">18.09.2017 - Project Kickoff</a></li>
+		<li><a href="../meetings/2017-09-22-kickoff/index.html">22.09.2017 - Kickoff with MeF</a></li>
+		<li><a href="../meetings/2017-09-29-weekly-meeting/index.html">29.09.2017 - Advisor Meeting Week 2</a></li>
+		<li><a href="../meetings/2017-10-10-weekly-meeting/index.html">10.10.2017 - Advisor Meeting Week 4</a></li>
+		<li><a href="../meetings/2017-10-20-weekly-meeting/index.html">20.10.2017 - Advisor Meeting Week 5</a></li>
+        <li><a href="../meetings/2017-11-09-weekly-meeting/index.html">09.11.2017 - Advisor Meeting Week 8</a></li>
+        <li><a href="../meetings/2017-11-21-weekly-meeting/index.html">21.11.2017 - Advisor Meeting Week 10</a></li>
+        <li><a href="../meetings/2017-12-12-weekly-meeting/index.html">12.12.2017 - Advisor Meeting Week 13</a></li>
+        <li><i><a href="../meetings/_template-meeting-minutes/index.html">Template</a></i></li>
         </ul>
         </div>
     </div>
@@ -93,11 +97,15 @@ layout: main.hbs
         <div class="card">
             <div class="card-header">
                 <div class="card-title">
-                    <a href="https://git.redbackup.org/projects/RED">📓 Code Repository</a>
+                    {{#archive}}
+                    <a href="../../sources/">📓 Code Repositories</a>
+                    {{else}}
+                    <a href="https://git.redbackup.org/projects/RED">📓 Code Repositories</a>
+                    {{/archive}}
                 </div>
             </div>
             <div class="card-body">
-            	source code, reviews, pull requests
+            	source code{{#archive}}. Reviews were conducted using pull requests on the <a href="https://git.redbackup.org/projects/RED">project server</a>.{{else}}, reviews, pull requests{{/archive}}
 	    </div>
         </div>
     </div>
@@ -121,9 +129,10 @@ layout: main.hbs
                 </div>
             </div>
             <ul>
-                <li><a href="../documents/usage-rights.pdf">Usage Rights Agreement</a></li>
-                <li><a href="../documents/signed-task-description.pdf">Signed Task Description</a></li>
-                <li><a href="../documents/poster.pdf">Poster</a></li>
+                <li><a href="{{#archive}}../{{/archive}}../documents/usage-rights.pdf">Usage Rights Agreement</a></li>
+                <li><a href="{{#archive}}../{{/archive}}../documents/signed-task-description.pdf">Signed Task Description</a></li>
+                <li><a href="{{#archive}}../{{/archive}}../documents/poster.pdf">Poster</a></li>
+                <li><a href="{{#archive}}../{{/archive}}../documents/time-accounting.pdf">Time Accounting</a></li>
             </ul>
         </div>
     </div>
@@ -131,7 +140,7 @@ layout: main.hbs
         <div class="card">
             <div class="card-header">
                 <div class="card-title">
-                    <a href="../development">🔨 Development Guide</a>
+                    <a href="../development/index.html">🔨 Development Guide</a>
                 </div>
             </div>
             <div class="card-body">
