Fix ci-release bug

--- a/website/src/index.hbs
+++ b/website/src/index.hbs
@@ -4,7 +4,7 @@ layout: main.hbs
 
 <div class="empty jumbotron">
     <p class="empty-title">Redbackup allows you to create encrypted backups and store them in your own distributed cloud.</p>
-    <a href="{{#archive}}../{{/archive}}documents/problem-statement.pdf" class="btn btn-primary" >➡️ Checkout the task description</a>
+    <a href="{{#archive}}../documents/{{/archive}}problem-statement.pdf" class="btn btn-primary" >➡️ Checkout the task description</a>
 </div>
 
 <h3>Featuring</h3>
