--- a/website/src/overview.hbs
+++ b/website/src/overview.hbs
@@ -26,7 +26,7 @@ layout: main.hbs
     <div class="column col-6 col-md-12">
         <div class="card">
             <div class="card-header">
-                <div class="card-title"><a href="{{#archive}}../{{/archive}}../documents/problem-statement.pdf">❓ Problem Statement</a></div>
+                <div class="card-title"><a href="../{{#archive}}../documents/{{/archive}}problem-statement.pdf">❓ Problem Statement</a></div>
             </div>
             <div class="card-body">
                 Initial project statement and task description
@@ -36,7 +36,7 @@ layout: main.hbs
     <div class="column col-6 col-md-12">
         <div class="card">
             <div class="card-header">
-                <div class="card-title"><a href="{{#archive}}../{{/archive}}../documents/project-plan.pdf" >🛣️ Project Plan</a></div>
+                <div class="card-title"><a href="../{{#archive}}../documents/{{/archive}}project-plan.pdf" >🛣️ Project Plan</a></div>
             </div>
             <div class="card-body">
                 organisation, schedule, iterations, milestones, risks analysis, risk management, infrastructure, quality measures, definition of done
@@ -47,7 +47,7 @@ layout: main.hbs
         <div class="card">
             <div class="card-header">
                 <div class="card-title">
-                    <a href="{{#archive}}../{{/archive}}../documents/final-submission.pdf">📚 Final Submission Document</a>
+                    <a href="../{{#archive}}../documents/{{/archive}}final-submission.pdf">📚 Final Submission Document</a>
                 </div>
             </div>
             <div class="card-body">
