Add missing declarations

--- a/website/src/overview.hbs
+++ b/website/src/overview.hbs
@@ -133,6 +133,8 @@ layout: main.hbs
                 <li><a href="{{#archive}}../{{/archive}}../documents/signed-task-description.pdf">Signed Task Description</a></li>
                 <li><a href="{{#archive}}../{{/archive}}../documents/poster.pdf">Poster</a></li>
                 <li><a href="{{#archive}}../{{/archive}}../documents/time-accounting.pdf">Time Accounting</a></li>
+                <li><a href="{{#archive}}../{{/archive}}../documents/einverstaendniserklaerung-eprints.pdf">Einverständniserklärung Publikation auf eprints.hsr.ch</a></li>
+                <li><a href="{{#archive}}../{{/archive}}../documents/declaration-of-authorship.pdf">Declaration of Authorship</a></li>
             </ul>
         </div>
     </div>
